--- a/static/style/style.css
+++ b/static/style/style.css
@@ -3,6 +3,8 @@
 html,body
 {
     height:100%;
+    font-family: "Raleway", sans-serif;
+    color:white;
 }
 
 body
@@ -17,6 +19,8 @@ body
     left:0;
     top:0;
     position:fixed;
+    display: flex;
+    align-items: center;
     background-color: black;
     border-bottom: 1px solid rgb(127, 127, 127);
     box-shadow: 0 10px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -41,6 +45,7 @@ body
     border: 3px solid #6a0101;
     width:120px;
     color:white;
+    cursor: pointer;
 }
 
 .RecordButton span
