--- a/static/style/style.css
+++ b/static/style/style.css
@@ -63,6 +63,19 @@ body
 	animation-timing-function: linear;
 }
 
+#audioFile
+{
+    display: none;
+}
+
+.audioButton
+{
+    font-family: "Raleway", sans-serif;
+    border-radius: 5px;
+    border:none;
+    cursor: pointer;
+}
+
 @keyframes pulse{
 	0%{
 		box-shadow: 0px 0px 5px 0px rgba(173,0,0,.3);
