--- a/static/style/style.css
+++ b/static/style/style.css
@@ -87,3 +87,19 @@ body
 		box-shadow: 0px 0px 5px 13px rgba(173,0,0,0);
 	}
 }
+
+@keyframes slideRight
+{
+    0%
+    {
+        opacity:0;
+        filter:blur(5px);
+        transform:translateX(-100%);
+    }
+    100%
+    {
+        opacity:1;
+        filter:blur(0px);
+        transform:translateX(0);
+    }
+}
